--- a/package.json
+++ b/package.json
@@ -11,15 +11,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^9.93.0",
-    "@react-three/fiber": "^8.15.13",
-    "framer-motion": "^10.17.9",
-    "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^10.0.5",
-    "three": "^0.160.0"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
